Reduce font sizes on mobile, fix for homepage spacing around posts, spacing fixes for featured images
Posts on the homepage display their image at full width on anything under 800px wide, but archives do not do this. I'm not entirely convinced that they should be different. This shall develop further. Also, need to use ems for media queries.

--- a/sass/home.scss
+++ b/sass/home.scss
@@ -1,21 +1,25 @@
 /*--------------------------------------------------------------
 # Home
 --------------------------------------------------------------*/
-@media screen and (min-width: 600px) {
-	.home .site-content {
+.home .site-content {
+	padding: 0;
+
+	@media screen and (min-width: 600px) {
 		max-width: 100%;
-		padding: 0;
+	}
+
+	@media screen and (min-width: 800px) {
+		padding: 0 2em;
 	}
 }
 
 .intro-posts {
-	padding-bottom: 1.5em;
-	margin: 0 auto 3em;
 	max-width: 80em;
 	@extend .clear;
 
 	@media screen and (min-width: 800px) {
 		padding: 2.2em 2.3em;
+		margin: 0 auto 3em;
 	}
 
 	a {
@@ -24,6 +28,24 @@
 		&:hover {
 			color: #404040;
 			text-decoration: underline;
+		}
+	}
+}
+
+.home {
+	.entry-title,
+	.entry-meta,
+	.entry-excerpt {
+		margin-left: 1.2rem;
+		margin-right: 1.2rem;
+
+		@media screen and (min-width: 600px) {
+			margin-left: 2rem;
+			margin-right: 2rem;
+		}
+
+		@media screen and (min-width: 800px) {
+			margin: 0;
 		}
 	}
 }
@@ -42,10 +64,14 @@
 }
 
 .home-featured .entry-title {
-	font-size: 2em;
+	font-size: 1.7em;
 	line-height: 1.125;
 	margin-bottom: 0.4em;
 	clear: none;
+
+	@media screen and (min-width: 800px) {
+		font-size: 2em;
+	}
 }
 
 .home-featured .read-more {
@@ -92,10 +118,6 @@
 	max-width: 60em;
 	margin: 0 auto;
 
-	.entry-title {
-		font-size: 1.7em;
-	}
-
 	@media screen and (min-width: 800px) {
 		.featured-image {
 			width: 29.34%
@@ -106,12 +128,4 @@
 			width: 67.66%;
 		}
 	}
-}
-
-.latest-feed h3 {
-	margin: 0 0 2.2em;
-	font-size: 1.3em;
-	font-weight: normal;
-	text-transform: uppercase;
-	text-align: center;
 }
